Crear Gasto Programable Activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".main.ui.GastosFavoritosActivity"
             android:label="@string/title_activity_gastos_favoritos" >
         </activity>
+        <activity
+            android:name=".main.ui.CrearGastoProgramableActivity"
+            android:label="@string/title_activity_crear_gasto_programable" >
+        </activity>
     </application>
 
 </manifest>
