Crear Gasto Favorito Activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".main.ui.CrearGastoProgramableActivity"
             android:label="@string/title_activity_crear_gasto_programable" >
         </activity>
+        <activity
+            android:name=".main.ui.CrearGastoFavoritoActivity"
+            android:label="@string/title_activity_crear_gasto_favorito" >
+        </activity>
     </application>
 
 </manifest>
