--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.funebunny.xpdroid" >
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:name="com.activeandroid.app.Application"
         android:allowBackup="true"
@@ -17,6 +20,19 @@
         <meta-data
             android:name="AA_MODELS"
             android:value="com.funebunny.xpdroid.gastos.dao.Gasto" />
+
+        <service android:name=".scheduler.Scheduler">
+        <intent-filter>
+            <action android:name="com.funebunny.xpdroid.scheduler.MyScheduler"/>
+        </intent-filter>
+        </service>
+
+        <receiver android:name=".scheduler.Receiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
+        </receiver>
 
         <activity
             android:name=".main.ui.MainActivity"
