--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </receiver>
 
         <activity
-            android:name=".main.ui.MainActivity"
+            android:name=".main.ui.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,47 +44,47 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".main.ui.CrearGastoActivity"
+            android:name=".main.ui.activity.CrearGastoActivity"
             android:label="@string/title_activity_crear_gasto"
-            android:parentActivityName=".main.ui.MainActivity" >
+            android:parentActivityName=".main.ui.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".main.ui.MainActivity" />
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".main.ui.CrearGastoProgramableActivity"
+            android:name=".main.ui.activity.CrearGastoProgramableActivity"
             android:label="@string/title_activity_crear_gasto_programable"
-            android:parentActivityName=".main.ui.MainActivity" >
+            android:parentActivityName=".main.ui.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".main.ui.MainActivity" />
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".main.ui.CrearGastoFavoritoActivity"
+            android:name=".main.ui.activity.CrearGastoFavoritoActivity"
             android:label="@string/title_activity_crear_gasto_favorito"
-            android:parentActivityName=".main.ui.MainActivity" >
+            android:parentActivityName=".main.ui.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".main.ui.MainActivity" />
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".main.ui.CrearObjetivoActivity"
+            android:name=".main.ui.activity.CrearObjetivoActivity"
             android:label="@string/title_activity_crear_objetivo"
-            android:parentActivityName=".main.ui.MainActivity" >
+            android:parentActivityName=".main.ui.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".main.ui.MainActivity" />
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".main.ui.CrearRecordatorioActivity"
+            android:name=".main.ui.activity.CrearRecordatorioActivity"
             android:label="@string/title_activity_crear_recordatorio"
-            android:parentActivityName=".main.ui.MainActivity" >
+            android:parentActivityName=".main.ui.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".main.ui.MainActivity" />
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
         <activity
-            android:name=".main.ui.XPDroidActivity"
+            android:name=".main.ui.activity.XPDroidActivity"
             android:label="@string/title_activity_xpdroid" >
         </activity>
     </application>
