--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name="com.activeandroid.app.Application"
@@ -21,6 +22,7 @@
             android:name="AA_MODELS"
             android:value="com.funebunny.xpdroid.gastos.dao.Gasto com.funebunny.xpdroid.gastos.dao.GastoProgramableDAO" />
 
+<!--
         <service android:name=".scheduler.Scheduler">
         <intent-filter>
             <action android:name="com.funebunny.xpdroid.scheduler.MyScheduler"/>
@@ -32,6 +34,13 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
+        </receiver>
+-->
+
+        <receiver android:name=".scheduler.AlarmChecker">
+            <!--<intent-filter>-->
+                <!--<action android:name="com.funebunny.xpdroid.scheduler.MyAlarm"/>-->
+            <!--</intent-filter>-->
         </receiver>
 
         <activity
