--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.funebunny.xpdroid" >
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -21,15 +21,16 @@
             android:name="AA_MODELS"
             android:value="com.funebunny.xpdroid.gastos.dao.Gasto com.funebunny.xpdroid.gastos.dao.GastoProgramableDAO" />
 
-        <service android:name=".scheduler.Scheduler">
-        <intent-filter>
-            <action android:name="com.funebunny.xpdroid.scheduler.MyScheduler"/>
-        </intent-filter>
+        <service android:name=".scheduler.Scheduler" >
+            <intent-filter>
+                <action android:name="com.funebunny.xpdroid.scheduler.MyScheduler" />
+            </intent-filter>
         </service>
 
-        <receiver android:name=".scheduler.Receiver">
+        <receiver android:name=".scheduler.Receiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.HOME" />
             </intent-filter>
         </receiver>
@@ -86,6 +87,14 @@
         <activity
             android:name=".main.ui.activity.XPDroidActivity"
             android:label="@string/title_activity_xpdroid" >
+        </activity>
+        <activity
+            android:name=".main.ui.activity.CrearGastoProgramableActivityV2"
+            android:label="@string/title_activity_crear_gasto_programable"
+            android:parentActivityName=".main.ui.activity.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".main.ui.activity.MainActivity" />
         </activity>
     </application>
 
