levantar notificaciones en el arranque

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         <receiver android:name=".scheduler.AlarmChecker" >
         </receiver>
 
+        <receiver android:name=".scheduler.DeviceBootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".main.ui.activity.MainActivity"
             android:label="@string/app_name" >
