--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.1'
+    buildToolsVersion '23.0.3'
 
     lintOptions {
         abortOnError false
@@ -15,8 +15,8 @@ android {
 
     defaultConfig {
         applicationId "com.funebunny.xpdroid"
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -28,7 +28,7 @@ android {
         }
 
         debug {
-            testCoverageEnabled = true  //Cobertura para tests
+            testCoverageEnabled = false  //Cobertura para tests
         }
     }
     sourceSets { main { java.srcDirs = ['src/main/java'] } }
